discussion/jgit/189132/189132_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

Bazel: Switch to using toolchain resolution for java rules

Bump Bazel version to release 5.0.0. In this new Bazel release,
--incompatible_use_toolchain_resolution_for_java_rules is flipped, that
means that the build must be adapted to toolchain resolution.

Specification toolchain resolution for java rules is here: [1]. Main
tracking Bazel issue is here: [2].

Given that new Bazel release also added support for remote JDK 17, add
experimental support for building with remote JDK 17 to produce major
byte code version 61.

Test Plan:

To build with remote JDK 11 run:

  $ bazel build :all

To build with remote JDK 17 run:

  $ bazel build --config java17 release

[1] https://docs.google.com/document/d/1MVbBxbKVKRJJY7DnkptHpvz7ROhyAYy4a-TZ-n7Q0r4/edit?usp=sharing
[2] https://github.com/bazelbuild/bazel/issues/7849

Change-Id: I8d26dff722c6677ea7642913b61e416b23ea9041

======================================================================================================================
COMMENTS
======================================================================================================================
Author: David Ostrovsky
Date: 2022-01-19 17:43:08.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2022-01-19 17:43:24.000000000
Message: 
Patch Set 6:

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline.java11/684/
----------------------------------------------------------------------------------------------------------------------
Author: David Ostrovsky
Date: 2022-01-19 17:45:09.000000000
Message: 
Patch Set 6:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2022-01-19 18:01:59.000000000
Message: 
Patch Set 6: Verified+1

Build Successful 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline.java11/684/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2022-01-19 22:54:52.000000000
Message: 
Patch Set 6:

(2 comments)
Line:9, /COMMIT_MSG -> maybe use this as the commit message subject ?

Line:28, /COMMIT_MSG -> all

----------------------------------------------------------------------------------------------------------------------
Author: Nasser Grainawi
Date: 2022-01-19 23:16:01.000000000
Message: 
Patch Set 6:

(1 comment)
Line:9, /COMMIT_MSG -> Switching to using toolchain resolution feels like it should be the subject though. I'm conflicted because they both seem like important things.

You could also split the change and do the 5.0.0 bump first with .bazelrc updated for the new default value of --incompatible_use_toolchain_resolution_for_java_rules, and then remove that update from .bazelrc and update the java rules. Maybe that doesn't provide much value aside from letting you have separate commit messages for each (it would be more valuable if the 5.0.0 bump had other impacts).

----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2022-01-20 00:15:19.000000000
Message: 
Patch Set 6:

(1 comment)
Line:9, /COMMIT_MSG -> No need to spend time on this detail, I am also fine with the current commit message.

----------------------------------------------------------------------------------------------------------------------
Author: David Ostrovsky
Date: 2022-01-20 05:47:07.000000000
Message: 
Patch Set 6:

(2 comments)
Line:9, /COMMIT_MSG -> > You could also split the change and do the 5.0.0 bump first with .bazelrc updated for the new default value of --incompatible_use_toolchain_resolution_for_java_rules, and then remove that update from .bazelrc and update the java rules.

This doesn't work. And that's why it was done in single change: bump Bazel and left the option unflipped.

When I only bump bazel version:

  diff --git a/.bazelversion b/.bazelversion
  index fcdb2e109..0062ac971 100644
  --- a/.bazelversion
  +++ b/.bazelversion
  @@ -1 +1 @@
  -4.0.0
  +5.0.0

And run this command, the compilation is failing:

  $ bazelisk build --incompatible_use_toolchain_resolution_for_java_rules=false :all
  WARNING: Option 'java_toolchain' is deprecated
  [...]
  org.eclipse.jgit/src/org/eclipse/jgit/lib/ObjectReader.java:264: error: cannot infer type arguments for AsyncObjectLoaderQueue<T>
		return new AsyncObjectLoaderQueue<>() {
		                                 ^
  reason: '<>' with anonymous inner classes is not supported in -source 8
    (use -source 9 or higher to enable '<>' with anonymous inner classes)

Line:18, /COMMIT_MSG -> This part of this commit can be separated in its own change, these lines in .bazelrc:

  # Builds using remote_jdk17, executes using remote_jdk11 or 
local_jdk
  build:java17 --java_language_version=17
  build:java17 --java_runtime_version=17
  build:java17 --tool_java_language_version=17
  build:java17 --tool_java_runtime_version=17

----------------------------------------------------------------------------------------------------------------------
Author: Nasser Grainawi
Date: 2022-01-20 19:18:26.000000000
MISMATCHED INLINE COMMENT
Line:9, /COMMIT_MSG -> Ack.
----------------------------------------------------------------------------------------------------------------------
Author: David Ostrovsky
Date: 2022-01-20 14:50:02.000000000
MISMATCHED INLINE COMMENT
Line:9, /COMMIT_MSG -> > This doesn't work. And that's why it was done in single change: bump Bazel and left the option unflipped.

To add to this, see my comment year ago on this issue: [1]. It was not completely fixed: the build ist not failing but old toolchain option doesn't really work. So basically, the only way forward is to start using toolchain_resolution_for_java_rules with Bazel 5.x. 

What I have not tried, though, is to flip --incompatible_use_toolchain_resolution_for_java_rules=true with Bazel 4.2. That way we would do one single step in single change, and not two steps in the same change. I have not tried this combination yet, though.

[1] https://github.com/bazelbuild/bazel/issues/7849#issuecomment-803290280
----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2022-01-20 20:35:26.000000000
MISMATCHED INLINE COMMENT
Line:18, /COMMIT_MSG -> I am fine with including this here
----------------------------------------------------------------------------------------------------------------------
Author: David Ostrovsky
Date: 2022-01-20 05:47:48.000000000
MISMATCHED INLINE COMMENT
Line:28, /COMMIT_MSG -> Done
----------------------------------------------------------------------------------------------------------------------
